# audapolis-model-hub

./: generate_models.py  pyproject.toml
.github/workflows/: main.yml
